# med-appoint-api

./: .env.exemple  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: main.yml
alembic/: env.py
alembic/versions/: 873750f4b7c2_create_schedule_table.py  acf285941aef_create_schedule_table.py
app/: main.py
app/api/: main.py
app/core/: config.py  database.py
app/models/: scheduling.py
app/schemas/models/: scheduling.py
deploy/ansible/: nginx-setup.yml  playbook.yml
deploy/ansible/group_vars/: all.example.yml
deploy/ansible/templates/: nginx.conf.j2
