[project]
name = "med-appoint-api"
version = "0.1.0"
description = "High-performance medical appointment API built with FastAPI and Python 3.14."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Danilo Dias", email = "contatodias.danilo@gmail.com"}
]
keywords = ["fastapi", "healthtech", "rest-api", "async"]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic[email]>=2.0.0",
    "phonenumbers>=9.0.24",
    "alembic>=1.18.4",
    "sqlalchemy>=2.0.46",
    "psycopg2-binary>=2.9.11",
    "sqlmodel>=0.0.33",
    "pydantic-settings>=2.12.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
    "httpx>=0.27.0",
]
